<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Tetris</string>
  <string name="best_score">BEST SCORE</string>
  <string name="your_score">YOUR SCORE</string>
  <string name="return_main_menu">Return to main menu</string>
  <string name="play_again">Try Again!</string>
  <string name="skip">SKIP</string>
  <string name="zen">ZEN MODE</string>
  <string name="time_attack">TIME ATTACK!</string>
  <string name="select_mode">SELECT MODE</string>
  <string name="select_theme">SELECT THEME</string>
  <string name="back">BACK</string>
  <string name="volume">Volume</string>
  <string name="find_place">Find a Place to Play!</string>
  <string name="facebook_app_id">1649204538652842</string>
    <string name="title_activity_cut_scene">CutSceneActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_game_mode">GameModeActivity</string>
    <string name="title_activity_high_score">HighScoreActivity</string>
    <string name="title_activity_misc">MiscActivity</string>
    <string name="title_activity_map">MapActivity</string>
</resources>