<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relayout"
        android:visibility="visible">
    </RelativeLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="6"
        android:visibility="visible"
        android:id="@+id/button_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4.8"
            android:orientation="vertical">
            <ImageView
                android:layout_width="65sp"
                android:layout_height="65sp"
                android:layout_gravity="right"
                android:src="@drawable/pause_button"
                android:scaleType="centerInside"
                android:onClick="click_pause_game"/>
        </LinearLayout>
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:max="180"
            android:progress="180"
            android:progressDrawable="@drawable/progress_bar_color"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:id="@+id/timer_pb"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/left_arrow"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:id="@+id/left_arrow_iv"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/right_arrow"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:id="@+id/right_arrow_iv"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/down_arrow"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:id="@+id/down_arrow_iv"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/rotate_arrow"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:id="@+id/rotate_arrow_iv"/>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="#87d37c"
        android:visibility="invisible"
        android:id="@+id/game_over_form">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:src="@drawable/game_over" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_score"
                android:textColor="#f4d03f"
                android:textSize="42sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="123"
                android:textColor="#e87e04"
                android:textSize="38sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:id="@+id/player_score_tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_score"
                android:textColor="#f4d03f"
                android:textSize="42sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="123"
                android:textColor="#e87e04"
                android:textSize="38sp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/best_score_tv"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/play_again"
                style="@style/ButtonText"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:onClick="click_over_try_again"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/red_button"
                android:text="@string/return_main_menu"
                style="@style/ButtonText"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:onClick="click_over_return_to_main"/>
        </LinearLayout>
    </FrameLayout>
</merge>