<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cs426.tetris.HighScoreActivity"
    android:orientation="vertical"
    android:id="@+id/high_score_bg"
    android:weightSum="10">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@drawable/highscore_logo"
        android:background="@drawable/frame"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="#1bbc9b">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_weight="1.3"
            android:textColor="#ffffff"
            android:text="@string/zen"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:shadowColor="#7000"
            android:shadowDx="12"
            android:shadowDy="12"
            android:shadowRadius="8"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textColor="#ffffff"
            android:text="123"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:shadowColor="#7000"
            android:shadowDx="12"
            android:shadowDy="12"
            android:shadowRadius="8"
            android:id="@+id/hs_normal_tv"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="#65c6bb">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_weight="1.3"
            android:textColor="#ffffff"
            android:text="@string/time_attack"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:shadowColor="#7000"
            android:shadowDx="12"
            android:shadowDy="12"
            android:shadowRadius="8"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textColor="#ffffff"
            android:text="123"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:shadowColor="#7000"
            android:shadowDx="12"
            android:shadowDy="12"
            android:shadowRadius="8"
            android:id="@+id/hs_time_tv"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@drawable/gems"
        android:id="@+id/hs_unlock_iv"
        android:scaleType="fitXY"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_vertical_margin">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/camera"
            android:onClick="click_camera"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.2"
                android:text="30 C"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="30sp"
                android:drawableStart="@drawable/temperature"
                android:id="@+id/temperature_tv"
                android:gravity="center_vertical"
                android:onClick="click_ss"/>

            <com.facebook.share.widget.ShareButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:id="@+id/fb_share_button"
                android:actionProviderClass="android.widget.ShareActionProvider"
                android:layout_margin="@dimen/activity_vertical_margin"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:text="@string/back"
        android:textColor="#ffffff"
        android:background="#f64747"
        android:textSize="20sp"
        android:padding="5dp"
        android:onClick="back_click"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>

</LinearLayout>
